# es-key-analysis

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.sh  pyproject.toml
essentia_key_extractor/: __init__.py  cli.py
examples/: demo.py  demo_segmented.py
scripts/: setup-essentia.sh
src/: bridge.cpp  essentia_init.cpp
src/core/: key_runner.cpp  key_runner.h
