[project]
name = "essentia-key-extractor"
version = "0.1.0"
description = "Slim Python wrapper exposing Essentia KeyExtractor algorithm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.1",
    "pybind11>=2.12",
    "soundfile>=0.13.1",
    "soxr>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error", "ignore::DeprecationWarning"]

[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12", "numpy>=1.23"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = ["pyinstrument>=5.1.1", "pytest>=8.4.2"]
compare = ["essentia==2.1b6.dev1177"]

[tool.scikit-build]
cmake.verbose = true
# Run setup script before build
build-dir = "build"
# Include only the vendor files that are actually used by CMakeLists.txt
sdist.include = [
    "src/**/*",
    "CMakeLists.txt",
    "version.h.in",
    "scripts/setup-essentia.sh",
]
